--- a/DISCO.ipynb
+++ b/DISCO.ipynb
@@ -56,8 +56,7 @@
     "library(readr)\n",
     "library(dplyr ,quietly = TRUE)\n",
     "# SECURITY FEATURE FOR PREVENTING .ipynb FILES FROM ACCIDENTALLY UPLOADING DATA TO GITHUB [DO NOT REMOVE]\n",
-    "gcptools::commit_hooks_setup(\"/home/jupyter/CIS_disclosure_control\")\n",
-    "print(\"hello\")"
+    "gcptools::commit_hooks_setup(\"/home/jupyter/CIS_disclosure_control\")"
    ]
   },
   {
