kris addition annotation
standardising annotation across sections, adding in addition context and tips to limit risk  of error messages

--- a/DISCO.ipynb
+++ b/DISCO.ipynb
@@ -37,7 +37,8 @@
    "id": "fa588865-941a-4f45-bd9a-49a7a95cfbd6",
    "metadata": {},
    "source": [
-    "run this code chunk to set the script up to run"
+    "<FONT COLOR=\"RED\"> **INSTRUCTION:**</FONT> Run this code chunk to set the script up to run <br>\n",
+    "<em>(For example, by clicking on cell and pressing ctrl+enter)</em>"
    ]
   },
   {
@@ -74,8 +75,9 @@
    "id": "1f0e9b2e-3973-400d-9972-7ad87209ecd5",
    "metadata": {},
    "source": [
-    "<FONT COLOR=\"RED\"> **INSTRUCTION:**</FONT> Insert the project name in quotation marks to the right of the assignment opperator <br> <em><strong>\n",
-    "    (e.g. project_name <- \"20221121_mrp\")</strong></em>."
+    "<FONT COLOR=\"RED\"> **INSTRUCTION:**</FONT> Insert the project name in quotation marks to the right of the assignment opperator <br>\n",
+    "<em>(keep a '/' on the end of the folder name, check there's no spaces) <br> \n",
+    "<strong> (e.g. project_name <- \"20221121_mrp\")</strong></em>."
    ]
   },
   {
@@ -140,7 +142,7 @@
    "id": "20485f5d-5bba-4e40-a667-4f34e824e35e",
    "metadata": {},
    "source": [
-    "Run this code chunk to get the names of the .csv file types in the project_name"
+    "<FONT COLOR=\"RED\"> **INSTRUCTION:**</FONT> Run this code chunk to get the names of the .csv file types in the project_name"
    ]
   },
   {
@@ -159,6 +161,7 @@
    "metadata": {},
    "source": [
     "<FONT COLOR=\"RED\"> **INSTRUCTION:**</FONT> Select the csv filepath you want to review by replacing the string below with a filepath to the csv <br> \n",
+    "<em>(keep .csv at end, check there's no spaces between \"\") <br>\n",
     "<em><strong> (e.g. csv_path <- \"20221121_mrp/probs_over_time_mrp_20221115_DTS221122_1411UTC.csv\") </strong></em>"
    ]
   },
@@ -177,7 +180,7 @@
    "id": "586c1803-3393-4f29-85ed-8e420645545a",
    "metadata": {},
    "source": [
-    "Run this code chunk to retrieve the data from the bucket"
+    "<FONT COLOR=\"RED\"> **INSTRUCTION:**</FONT> Run this code chunk to retrieve the data from the bucket"
    ]
   },
   {
@@ -303,6 +306,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1840e36d-adcb-4011-9cb0-05c8f61eb302",
+   "metadata": {},
+   "source": [
+    "<FONT COLOR=\"RED\"> **INSTRUCTION:**</FONT> The explore function below's output depends on the variable type: <br>\n",
+    "<strong> If categorical  </strong> (e.g. region) it lists the unique categories (e.g. wales, south east) <br>\n",
+    "<strong> If numeric </strong> (e.g. numbers of postives) it lists the % of data within which falls below the low count threshold <br>\n",
+    "<strong> If an error  </strong> nothing or a non relevant dataset is produced"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "52b1c8eb-4b92-421f-bea9-2cdc1d7b847c",
@@ -357,7 +371,7 @@
    "id": "414e6d56-5484-4617-9264-99f2650d9e61",
    "metadata": {},
    "source": [
-    "Run this code chunk to get the names of the .yml or .yaml file types in the project_name"
+    "<FONT COLOR=\"RED\"> **INSTRUCTION:**</FONT> Run this code chunk to get the names of the .yml or .yaml file types in the project_name"
    ]
   },
   {
@@ -376,6 +390,7 @@
    "metadata": {},
    "source": [
     "<FONT COLOR=\"RED\"> **INSTRUCTION:**</FONT> Insert the filepath of the yaml file you want to explore <br> \n",
+    "<em>(keep .yaml or .yml at end, check there's no spaces between \"\") <br>\n",
     "<em><strong> e.g yaml_filepath <- \"20221121_mrp/configs_mrp_20221115_DTS221215_1814UTC.yaml\"  </em></strong> "
    ]
   },
@@ -394,7 +409,8 @@
    "id": "c8cf3011-a6df-474a-b4e4-15bf9b887dcf",
    "metadata": {},
    "source": [
-    "Run this code chunk to retrieve the contents of the yaml file from the review bucket"
+    "<FONT COLOR=\"RED\"> **INSTRUCTION:**</FONT> Run this code chunk to retrieve the contents of the yaml file from the review bucket <br>\n",
+    "If a table with 0s is produced, there isn'that file type"
    ]
   },
   {
@@ -420,7 +436,8 @@
    "id": "4bceaf72-ba04-4233-90e3-cc55c8039bda",
    "metadata": {},
    "source": [
-    "Run this code chunk to get the names of the .jpg or .jpeg file types in the project"
+    "<FONT COLOR=\"RED\"> **INSTRUCTION:**</FONT> Run this code chunk to get the names of the .jpg or .jpeg file types in the project <br>\n",
+    "<em>(keep .jpeg or .jpg at end, check there's no spaces between \"\") <br>"
    ]
   },
   {
@@ -477,7 +494,7 @@
    "id": "8eb06778-760d-4308-bbff-89b506ebcd17",
    "metadata": {},
    "source": [
-    "Run this code chunk to print the jpeg to the console"
+    "<FONT COLOR=\"RED\"> **INSTRUCTION:**</FONT> Run this code chunk to print the jpeg to the console"
    ]
   },
   {
@@ -503,7 +520,7 @@
    "id": "fb29a167-2712-491c-8c85-a300833a5527",
    "metadata": {},
    "source": [
-    "Run this code chunk to get the names of the .html file types in the project_name"
+    "<FONT COLOR=\"RED\"> **INSTRUCTION:**</FONT> Run this code chunk to get the names of the .html file types in the project_name"
    ]
   },
   {
@@ -557,6 +574,7 @@
    "metadata": {},
    "source": [
     "<FONT COLOR=\"RED\"> **INSTRUCTION:**</FONT> Replace the string in the 'file' argument to select the correct file from the review bucket<br> \n",
+    "<em>(keep .html at end, check there's no spaces between \"\") <br>\n",
     "<em><strong> e.g html_filepath <- \"20221121_mrp/MRP_QA_England_Datarun20221121_Co20221115_PrevCo20221108.html\"  </em></strong> "
    ]
   },
@@ -585,16 +603,16 @@
    "id": "4b2ca1ab-5966-4d71-884e-788caef8a49b",
    "metadata": {},
    "source": [
-    "<FONT COLOR=\"RED\"> **INSTRUCTION:**</FONT> Locate the QA_reports folder at the repo level of folders (i.e. where you would go to navigate to other repo's) to review the report"
+    "<FONT COLOR=\"RED\"> **INSTRUCTION:**</FONT> Locate the QA_reports folder at the repo (/root) level of folders (i.e. where you would go to navigate to other repo's) to review the report"
    ]
   }
  ],
  "metadata": {
   "environment": {
    "kernel": "ir",
-   "name": "r-cpu.4-1.m91",
+   "name": "r-cpu.4-1.m96",
    "type": "gcloud",
-   "uri": "gcr.io/deeplearning-platform-release/r-cpu.4-1:m91"
+   "uri": "gcr.io/deeplearning-platform-release/r-cpu.4-1:m96"
   },
   "kernelspec": {
    "display_name": "R",
@@ -607,7 +625,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "4.2.0"
+   "version": "4.2.1"
   }
  },
  "nbformat": 4,
