adding annotations to the disco script

--- a/DISCO.ipynb
+++ b/DISCO.ipynb
@@ -21,7 +21,9 @@
    "id": "2d211be1-86cb-4e9a-bd79-b6ccad65faa5",
    "metadata": {},
    "source": [
-    "This notebook has been set up to read in csvs, jpegs, and html files which have been sent to the review bucket, so that they can be checked for quality and disclosure. All items which are requested for export first needs to be Disclosure controlled by a seperate DisCO (Disclosure Control Officer), this cannot be the same person who ran the data and requested the export. Once disclosure controlled a Data Journey manager can be notified to move the data ready for export."
+    "This notebook has been set up to read in csvs, jpegs, and html files which have been sent to the review bucket, so that they can be checked for quality and disclosure. All items which are requested for export first needs to be Disclosure controlled by a seperate DisCO (Disclosure Control Officer), this cannot be the same person who ran the data and requested the export. Once disclosure controlled a Data Journey manager can be notified to move the data ready for export.\n",
+    "\n",
+    "For additional info see 'DISCO GUIDE IN POLESTAR PLUS' within the Polestar plus Disco resource area of sharepoint."
    ]
   },
   {
@@ -77,7 +79,7 @@
    "source": [
     "<FONT COLOR=\"RED\"> **INSTRUCTION:**</FONT> Insert the project name in quotation marks to the right of the assignment opperator <br>\n",
     "<em>(keep a '/' on the end of the folder name, check there's no spaces) <br> \n",
-    "<strong> (e.g. project_name <- \"20221121_mrp\")</strong></em>."
+    "<strong> (e.g. project_name <- \"20221121_mrp\")</strong></em>"
    ]
   },
   {
@@ -172,7 +174,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "csv_path <- \"20221205_agecontour_swabs/input_age_contour_swabs_20221126_DTS221206_1028UTC.csv\" "
+    "csv_path <- \"20221205_agecontour_swabs/input_age_contour_swabs_20221126_DTS221206_1028UTC.csv\""
    ]
   },
   {
