edited to get working with P+

--- a/DISCO.ipynb
+++ b/DISCO.ipynb
@@ -115,7 +115,7 @@
     "    \n",
     "    project_pattern <- paste0(\"^\", project_name)\n",
     "    \n",
-    "    project_files <- grep(x = googleCloudStorageR::gcs_list_objects(\"polestar-prod-review\")$name,\n",
+    "    project_files <- grep(x = googleCloudStorageR::gcs_list_objects(gcptools::gcp_paths$review_bucket)$name,\n",
     "                   pattern = project_pattern,\n",
     "                   value = TRUE)\n",
     "    \n",
@@ -346,7 +346,7 @@
     "#'\n",
     "#' @export \n",
     "\n",
-    "gcp_read_yaml <- function(filepath, bucket = \"polestar-prod-review\"){\n",
+    "gcp_read_yaml <- function(filepath, bucket = gcptools::gcp_paths$review_bucket){\n",
     "    \n",
     "    tmp <- tempfile(fileext = \".yaml\")\n",
     "    \n",
@@ -481,7 +481,7 @@
     "\n",
     "print_jpeg <- function(jpeg_filepath){\n",
     "    \n",
-    "    jpeg <- suppressMessages(googleCloudStorageR::gcs_get_object(jpeg_filepath, bucket = \"polestar-prod-review\"))\n",
+    "    jpeg <- suppressMessages(googleCloudStorageR::gcs_get_object(jpeg_filepath, bucket = gcptools::gcp_paths$review_bucket))\n",
     "\n",
     "    options(repr.plot.width = 25, repr.plot.height = 25)\n",
     "\n",
@@ -563,7 +563,7 @@
     "    }\n",
     "\n",
     "    suppressMessages(gcptools::download_qa_report_to_notebook(file = html_filepath, \n",
-    "                                            bucket = \"polestar-prod-review\" ))\n",
+    "                                            bucket = gcptools::gcp_paths$review_bucket))\n",
     "\n",
     "    print(paste0(\"The \", html_filepath, \" file has been saved in the '\", main_directory,\"/\", sub_directory, \"' folder\"))\n",
     "\n",
